--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=20 <21"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@auth0/nextjs-auth0": "^4.9.0",
@@ -23,12 +26,12 @@
     "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.12",
     "jose": "^6.0.12",
-    "next": "^15.4.7",
+    "next": "^15.5.0",
     "next-auth": "^4.24.11",
     "nodemailer": "^7.0.5",
     "prisma": "^6.14.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "resend": "^6.0.1",
     "uuid": "^11.1.0"
   },
@@ -39,7 +42,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "^15.5.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
