--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,29 +1,31 @@
 name: Ship tagged releases to Vercel (prod)
 
-on:
-  push:
-    tags: ['v*']          # deploys only version tags like v0.4-mvp
+  on:
+    push:
+      tags: ['v*']          # deploys only version tags like v0.4-mvp
 
-jobs:
-  prod:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+  jobs:
+    prod:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+        - uses: actions/setup-node@v4
           with:
             node-version: '18'
             cache: 'npm'
 
         - run: npm ci
         - run: npm run build
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          vercel-token:  ${{ secrets.VERCEL_TOKEN }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-org-id:    ${{ secrets.VERCEL_ORG_ID }}
-          vercel-args: '--prod --prebuilt'
-        env:
-          NEXT_PUBLIC_SUPABASE_URL:      ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
-          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
-          SUPABASE_SERVICE_ROLE_KEY:     ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+
+        - uses: amondnet/vercel-action@v25
+          with:
+            github-token: ${{ secrets.GITHUB_TOKEN }}
+            vercel-token:  ${{ secrets.VERCEL_TOKEN }}
+            vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+            vercel-org-id:    ${{ secrets.VERCEL_ORG_ID }}
+            vercel-args: '--prod --prebuilt'
+          env:
+            NEXT_PUBLIC_SUPABASE_URL:      ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+            NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+            SUPABASE_SERVICE_ROLE_KEY:     ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
